fix bug with twice open edit todo dialog by doubleclick to todos add some bilders for often-uses classes and confirmation alerts where it needed fix bug with read todos from file